--- a/backend/heyrube/package.json
+++ b/backend/heyrube/package.json
@@ -5,6 +5,8 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
+        "test": "vitest run",
+        "test:ui": "vitest",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix"
@@ -21,7 +23,10 @@
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript-eslint": "^8.23.0",
-        "vue-tsc": "^2.2.4"
+        "vue-tsc": "^2.2.4",
+        "@vue/test-utils": "^2.4.6",
+        "jsdom": "^24.1.0",
+        "vitest": "^2.1.8"
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
