--- a/backend/heyrube/docker-compose.yml
+++ b/backend/heyrube/docker-compose.yml
@@ -26,9 +26,7 @@ services:
     mongo:
         image: mongo
         restart: always
-        environment:
-            MONGO_INITDB_ROOT_USERNAME: root
-            MONGO_INITDB_ROOT_PASSWORD: example
+        command: ["--replSet", "rs0", "--bind_ip_all"]
         networks:
             - sail
 
@@ -38,7 +36,7 @@ services:
         ports:
             - 8081:8081
         environment:
-            ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+            ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
             ME_CONFIG_BASICAUTH_ENABLED: true
             ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
             ME_CONFIG_BASICAUTH_PASSWORD: mongoexpresspass
